--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ ANGELA BRISOTTO
 <strong>ABOUT ME</strong> | <strong>CHI SONO</strong>
 </p>
 <p>
-My name is Angela Brisotto and I am a writer, translator, and actress from and based in Italy. I spent the last few years studying foreigh languages while I was also trained in the analysis of literary texts with a special focus on theater. Inspired by my work for the <em>Brooklyn Rail</em>, a New York-based journal on art and culture, I set out to interview people working in the arts. My creative research interests resides in theater, literature, and the exploration of boundaries between the written, visual, and performative dimensions of the arts. I am a contributor to <em>The Brooklyn Rail</em>.
+My name is Angela Brisotto and I am a writer, translator, and actress from and based in Italy. I spent the last few years studying foreigh languages while I was also trained in the analysis of literary texts with a special focus on theater. Inspired by my work for the <em>Brooklyn Rail</em>, a New York-based journal on art and culture, I set out to interview people working in the arts. My creative research interests resides in theater, literature, and the exploration of boundaries between the written, visual, and performative dimensions of the arts.
 </p>
 <p>
 Il mio nome è Angela Brisotto e sono una scrittrice, traduttrice e attrice italiana. Ho passato gli ultimi anni a studiare lingue straniere mentre approfondivo l’analisi critica di testi letterari. Il mio percorso di studi ha virato in particolare verso lo studio di opere teatrali. Prendendo ispirazione dal mio lavoro per il <em>Brooklyn Rail</em>, una rivista d’arte e cultura con sede a New York, ho cominciato a intervistare persone che lavorano nel mondo delle arti. I miei interessi di ricerca creativa comprendono il teatro, la letteratura e l’esplorazione dei confini tra la dimensione scritta, visiva e performativa delle arti. Scrivo per la rivista <em>The Brooklyn Rail</em>.   
@@ -23,25 +23,4 @@ Il mio nome è Angela Brisotto e sono una scrittrice, traduttrice e attrice ital
 <a href="http://hdl.handle.net/10579/14011">http://hdl.handle.net/10579/14011</a>
 </li>
 </ul>
-<p>
-<strong>THEATER</strong> | <strong>TEATRO</strong>
-</p>
-<ul>
 
-<li><em>Noi c’eravamo. Non solo donne nella Grande Guerra</em><br>
-Regia di Anna Amadio e Silvana Trevisiol. Spettacolo di Compagnia Teatro d’Arte di Spresiano. Spresiano (TV), Italia.
-</li>
-</ul>
-<p>
-<strong>DROP ME A LINE</strong> | <strong>PER CONTATTARMI</strong>
-</p>
-<p>
-Please feel free to contact me if you want more information about my work. <br>
-angela.brisotto@gmail.com 
-</p>
-<p>
-Scrivetemi per avere maggiori informazioni sul mio lavoro.
-</p>
-<p>
-angela.brisotto@gmail.com
-</p>
