--- a/index.html
+++ b/index.html
@@ -1,31 +1,52 @@
 ![ahmad-odeh-TK_WT3dl2tw-unsplash](https://user-images.githubusercontent.com/57620839/68619666-30653500-04cc-11ea-9141-213a916327bd.jpg)
 
-
-# ANGELA BRISOTTO
-
-
-## _writer, translator, and actress_  
+<h1>ANGELA BRISOTTO</h1>
 
 
-**ABOUT ME** | **CHI SONO**
+<p><em>writer, translator, and actress</em><br>
 
-My name is Angela Brisotto and I am a writer, translator, and actress from and based in Italy. I spent the last few years studying foreign languages while I was also trained in the analysis of literary texts with a special focus on theater. Inspired by my work for the _Brooklyn Rail_, a New York-based journal on art and culture, I set out to interview people working in the arts. My creative research interests reside in theater, literature, and the exploration of boundaries between the written, visual, and performative dimensions of the arts. 
+</p>
+<p>
+<strong>ABOUT ME</strong> | <strong>CHI SONO</strong>
+</p>
+<p>
+My name is Angela Brisotto and I am a writer, translator, and actress from and based in Italy. I spent the last few years studying foreigh languages while I was also trained in the analysis of literary texts with a special focus on theater. Inspired by my work for the <em>Brooklyn Rail</em>, a New York-based journal on art and culture, I set out to interview people working in the arts. My creative research interests resides in theater, literature, and the exploration of boundaries between the written, visual, and performative dimensions of the arts. I am a contributor to <em>The Brooklyn Rail</em>.
+</p>
+<p>
+Il mio nome è Angela Brisotto e sono una scrittrice, traduttrice e attrice italiana. Ho passato gli ultimi anni a studiare lingue straniere mentre approfondivo l’analisi critica di testi letterari. Il mio percorso di studi ha virato in particolare verso lo studio di opere teatrali. Prendendo ispirazione dal mio lavoro per il <em>Brooklyn Rail</em>, una rivista d’arte e cultura con sede a New York, ho cominciato a intervistare persone che lavorano nel mondo delle arti. I miei interessi di ricerca creativa comprendono il teatro, la letteratura e l’esplorazione dei confini tra la dimensione scritta, visiva e performativa delle arti. Scrivo per la rivista <em>The Brooklyn Rail</em>.   
+</p>
+<p>
+<strong>PUBLICATIONS</strong> | <strong>PUBBLICAZIONI</strong>
+</p>
+<ul>
 
-Il mio nome è Angela Brisotto e sono una scrittrice, traduttrice e attrice italiana. Ho passato gli ultimi anni a studiare lingue straniere mentre approfondivo l’analisi critica di testi letterari. Il mio percorso di studi ha virato in particolare verso lo studio di opere teatrali. Prendendo ispirazione dal mio lavoro per il _Brooklyn Rail_, una rivista d’arte e cultura con sede a New York, ho cominciato a intervistare persone che lavorano nel mondo delle arti. I miei interessi di ricerca creativa comprendono il teatro, la letteratura e l’esplorazione dei confini tra la dimensione scritta, visiva e performativa delle arti.    
+<li><em>21st Century Liquid Hubris on Stage: a theatrical response to the 2008 financial crisis</em>, Università Ca’ Foscari Venezia, 2018.   <br>
+<a href="http://hdl.handle.net/10579/14011">http://hdl.handle.net/10579/14011</a>
+</li>
+</ul>
+<p>
+<strong>THEATER</strong> | <strong>TEATRO</strong>
+</p>
+<ul>
 
-**PUBLICATIONS** | **PUBBLICAZIONI**
+<li><em>Noi c’eravamo. Non solo donne nella Grande Guerra</em><br>
+Regia di Anna Amadio e Silvana Trevisiol. Spettacolo di Compagnia Teatro d’Arte di Spresiano. Spresiano (TV), Italia.
+</li>
+</ul>
+<p>
+<strong>DROP ME A LINE</strong> | <strong>PER CONTATTARMI</strong>
+</p>
+<p>
+Please feel free to contact me if you want more information about my work. <br>
+angela.brisotto@gmail.com 
+</p>
+<p>
+Scrivetemi per avere maggiori informazioni sul mio lavoro.
+</p>
+<p>
+<strong><code>📮 </code></strong>angela.brisotto@gmail.com
 
 
-
-*   _21st Century Liquid Hubris on Stage: a theatrical response to the 2008 financial crisis_, Università Ca’ Foscari Venezia, 2018.    
-[http://hdl.handle.net/10579/14011](http://hdl.handle.net/10579/14011)
 
 ![kelly-sikkema-bj3l739cwc8-unsplash](https://user-images.githubusercontent.com/57620839/68620287-753d9b80-04cd-11ea-9664-9406fffa4043.jpg)
 
-**DROP ME A LINE** | **PER CONTATTARMI**
-
-Please feel free to contact me if you want more information about my work.  
-
-Scrivetemi per avere maggiori informazioni sul mio lavoro.
-
-<code>📮 </code>**angela.brisotto@gmail.com**
