--- a/index.html
+++ b/index.html
@@ -1,40 +1,32 @@
-<h1>ANGELA BRISOTTO</h1>
+# ANGELA BRISOTTO
 
 
-<p><em>writer, translator, and actress</em><br>
+## _writer, translator, and actress_ \
 
-</p>
-<p>
-<strong>ABOUT ME</strong> | <strong>CHI SONO</strong>
-</p>
-<p>
-My name is Angela Brisotto and I am a writer, translator, and actress from and based in Italy. I spent the last few years studying foreign languages while I was also trained in the analysis of literary texts with a special focus on theater. Inspired by my work for the <em>Brooklyn Rail</em>, a New York-based journal on art and culture, I set out to interview people working in the arts. My creative research interests reside in theater, literature, and the exploration of boundaries between the written, visual, and performative dimensions of the arts. I am a contributor to <em>The Brooklyn Rail</em>.
-</p>
-<p>
-Il mio nome è Angela Brisotto e nella vita scrivo, traduco e recito su un palcoscenico. Ho passato gli ultimi anni a studiare lingue straniere mentre approfondivo l’analisi critica di testi letterari. Il mio percorso di studi ha virato in particolare verso lo studio di opere teatrali. Prendendo ispirazione dal mio lavoro per il <em>Brooklyn Rail</em>, una rivista d’arte e cultura con sede a New York, ho cominciato a intervistare persone che lavorano nel mondo delle arti. I miei interessi di ricerca creativa comprendono il teatro, la letteratura e l’esplorazione dei confini tra la dimensione scritta, visiva e performativa delle arti. Scrivo per la rivista <em>The Brooklyn Rail</em>.   
-</p>
-<p>
-<strong>PUBLICATIONS</strong> | <strong>PUBBLICAZIONI</strong>
-</p>
-<ul>
 
-<li><em>21st Century Liquid Hubris on Stage: a theatrical response to the 2008 financial crisis</em>, Università Ca’ Foscari Venezia, 2018.   <br>
-<a href="http://hdl.handle.net/10579/14011">http://hdl.handle.net/10579/14011</a>
-</li>
-</ul>
+**ABOUT ME** | **CHI SONO**
 
-<p>
-<strong>DROP ME A LINE</strong> | <strong>PER CONTATTARMI</strong>
-</p>
-<p>
-Please feel free to contact me if you want more information about my work. <br>
+My name is Angela Brisotto and I am a writer, translator, and actress from and based in Italy. I spent the last few years studying foreign languages while I was also trained in the analysis of literary texts with a special focus on theater. Inspired by my work for the _Brooklyn Rail_, a New York-based journal on art and culture, I set out to interview people working in the arts. My creative research interests reside in theater, literature, and the exploration of boundaries between the written, visual, and performative dimensions of the arts. I am a contributor to _The Brooklyn Rail_.
+
+Il mio nome è Angela Brisotto e nella vita scrivo, traduco e recito su un palcoscenico. Ho passato gli ultimi anni a studiare lingue straniere mentre approfondivo l’analisi critica di testi letterari. Il mio percorso di studi ha virato in particolare verso lo studio di opere teatrali. Prendendo ispirazione dal mio lavoro per il _Brooklyn Rail_, una rivista d’arte e cultura con sede a New York, ho cominciato a intervistare persone che lavorano nel mondo delle arti. I miei interessi di ricerca creativa comprendono il teatro, la letteratura e l’esplorazione dei confini tra la dimensione scritta, visiva e performativa delle arti. Scrivo per la rivista _The Brooklyn Rail_.   
+
+**PUBLICATIONS** | **PUBBLICAZIONI**
+
+
+
+*   _21st Century Liquid Hubris on Stage: a theatrical response to the 2008 financial crisis_, Università Ca’ Foscari Venezia, 2018.    \
+[http://hdl.handle.net/10579/14011](http://hdl.handle.net/10579/14011)
+
+
+
+**DROP ME A LINE** | **PER CONTATTARMI**
+
+Please feel free to contact me if you want more information about my work.  \
 angela.brisotto@gmail.com 
-</p>
-<p>
+
 Scrivetemi per avere maggiori informazioni sul mio lavoro.
-</p>
-<p>
-<strong><code>📮 </code></strong>angela.brisotto@gmail.com
+
+**<code>📮 </code></strong>angela.brisotto@gmail.com
 
 
 
